# hotcoco

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  ROADMAP.md  SECURITY.md  STYLE.md  _typos.toml  deny.toml  pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/hotcoco/: Cargo.toml
crates/hotcoco-cli/: Cargo.toml
crates/hotcoco-cli/src/: main.rs
crates/hotcoco-pyo3/: Cargo.toml  README.md  pyproject.toml
crates/hotcoco-pyo3/data/: adversarial_harness.py  bench.py  bench_fiftyone.py  bench_objects365.py  parity.py  parity_lvis.py  parity_tide.py  test_parity.py
crates/hotcoco-pyo3/data/adversarial_fixtures/: 101_identical_score.json  101_identical_score_dets.json  1x1_image.json  all_crowd.json  all_fp.json  area_boundary.json  area_exactly_at_large_boundary.json  area_exactly_at_small_boundary.json  area_mismatch.json  bbox_outside_image.json  cat_no_dets.json  cat_with_no_dets.json  crowd_absorbs_fp.json  crowd_contains_gt.json  crowd_cross_category.json  crowd_dt_iou_boundary.json  crowd_no_overlap.json  crowd_polygon.json  crowd_rematching.json  crowd_with_polygon.json  dt_unknown_cat.json  dt_unknown_category.json  dt_unknown_image.json  duplicate_ann_ids.json  duplicate_bbox_different_scores.json  duplicate_dts.json  duplicate_gt_bboxes.json  empty_eval.json  exact_area_boundaries.json  exact_max_det.json  exactly_100_dets.json  extreme_scores.json  gt_outside_bounds.json  gts_all_in_large_only.json  imbalanced_gt_dt.json  iou_at_095.json  iou_at_each_threshold.json  iou_at_threshold.json  iscrowd_mixed.json  iscrowd_polygon_seg.json  (+33 more)
crates/hotcoco-pyo3/python/hotcoco/: __init__.py  cli.py
crates/hotcoco-pyo3/src/: convert.rs  lib.rs  mask.rs
crates/hotcoco-pyo3/tests/: test_integrations.py
crates/hotcoco/examples/: basic_eval.rs  custom_params.rs
crates/hotcoco/src/: coco.rs  convert.rs  error.rs  eval.rs  geometry.rs  healthcheck.rs  hierarchy.rs  lib.rs  mask.rs  params.rs  types.rs
crates/hotcoco/src/convert/: cvat.rs  dota.rs  mod.rs  mot.rs  voc.rs  yolo.rs
crates/hotcoco/src/eval/: accumulate.rs  calibration.rs  compare.rs  confusion.rs  diagnostics.rs  evaluate.rs  expand.rs  iou.rs  mod.rs  results.rs  slice.rs  summarize.rs  tide.rs  types.rs
crates/hotcoco/src/eval/tracking/: accumulate.rs  clear.rs  hota.rs  identity.rs  matching.rs  mod.rs  types.rs
crates/hotcoco/tests/: integration_test.rs
crates/hotcoco/tests/fixtures/: tracking_dt.json  tracking_gt.json
docs/: benchmarks.md  cli.md  index.md
docs/api/: coco.md  cocoeval.md  hierarchy.md  integrations.md  mask.md  params.md  plot.md  tracking.md
docs/getting-started/: installation.md  migration.md  quickstart.md  troubleshooting.md
docs/guide/: browse.md  datasets.md  evaluation.md  frameworks.md  masks.md  plotting.md  pytorch.md  results.md  tracking.md
docs/stylesheets/: extra.css
examples/: coco_evaluation_101.ipynb
python/hotcoco/: __init__.py  __init__.pyi  _style.py  browse.py  cli.py  dashboard.py  eval_index.py  plot.py  server.py
python/hotcoco/plot/: __init__.py  core.py  data.py  plots.py  report.py  theme.py
python/hotcoco/static/: dashboard.js  gallery.js  overlay.js  style.css
python/hotcoco/templates/: base.html  dashboard.html  index.html
python/hotcoco/templates/partials/: detail.html  error.html  gallery.html
scripts/: adversarial_harness.py  bench.py  fuzz_obb_parity.py  fuzz_parity.py  fuzz_track_hypothesis.py  fuzz_track_parity.py  helpers.py  parity.py  test_browse.py  test_parity.py  test_stubs.py  test_track_parity.py
