[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hotcoco"
version = "0.3.0"
description = "Drop-in pycocotools replacement — up to 23x faster COCO evaluation in pure Rust"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Derek Allman", email = "derek.allman@yahoo.com" }]
keywords = ["coco", "pycocotools", "object-detection", "evaluation", "computer-vision", "segmentation", "keypoints", "instance-segmentation"]
readme = "README.md"
dependencies = [
    "numpy>=1.22",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.12.6",
    "pycocotools",
    "faster-coco-eval",
    "hypothesis",
    "lvis>=0.5.3",
    "psutil",
    "pytest",
    "ruff>=0.4",
]
torch = [
    "torch>=1.9",
    "Pillow>=8.0",
]
completions = [
    "argcomplete>=3.0",
]
plot = [
    "matplotlib>=3.5",
]
browse = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.1",
    "Pillow>=8.0",
]

[project.urls]
Homepage = "https://derekallman.github.io/hotcoco/"
Repository = "https://github.com/derekallman/hotcoco"
Documentation = "https://derekallman.github.io/hotcoco/"
Changelog = "https://github.com/derekallman/hotcoco/releases"

[project.scripts]
coco = "hotcoco.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
manifest-path = "crates/hotcoco-pyo3/Cargo.toml"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["external/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.uv]
package = false
