[package]
name = "hotcoco-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for COCO dataset evaluation"

[[bin]]
name = "coco-eval"
path = "src/main.rs"

[dependencies]
hotcoco = { version = "0.3.0", path = "../hotcoco" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
