[package]
name = "hotcoco-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for COCO dataset evaluation"

[[bin]]
name = "coco-eval"
path = "src/main.rs"

[dependencies]
hotcoco = { version = "0.4.0", path = "../hotcoco" }
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
anstyle = "1"
anstream = "0.6"
indicatif = "0.17"

[lints]
workspace = true
