[package]
name = "hotcoco-pyo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for hotcoco via PyO3"
publish = false

[lib]
name = "hotcoco"
crate-type = ["cdylib"]

[dependencies]
hotcoco-core = { version = "0.3.0", path = "../hotcoco", package = "hotcoco" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
numpy = "0.28"
serde_json = "1"

[lints]
workspace = true
