[package]
name = "hotcoco"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust implementation of pycocotools — COCO dataset API for object detection, segmentation, and keypoint evaluation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
