[package]
name = "hotcoco"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust implementation of pycocotools — COCO dataset API for object detection, segmentation, and keypoint evaluation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.39"
rayon = "1"
rand = "0.9"
thiserror = "2"
lapjv = "0.3"
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
